# rectangle_table_detection

./: CMakeLists.txt  README  README.md  basicuse.md  doxy_detect_norm_planes  doxy_index  doxy_rectangular_table_detect  doxyconf  doxyfile  index.dox  index.html  package.xml  rosconsole_debug.conf
detect_normal_planes/html/: detect__normal__planes_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  index.html  rviz__publish_8h.html  rviz__publish_8h_source.html
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  concave__hull_8h.html  concave__hull_8h_source.html  concave__hull__2d_8h.html  concave__hull__2d_8h_source.html  convex__hull_8h.html  convex__hull_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  geometry__utilities_8h.html  geometry__utilities_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group___user_parameter_variables.html  group__matrix_8h.html  group__matrix_8h_source.html  index.html  index_8dox.html  mainpage.html  mainpage_8h.html  mainpage_8h_source.html  modules.html  pages.html  ransac__plane__compute_8h.html  ransac__plane__compute_8h_source.html  ransac__plane__detection_8h.html  ransac__plane__detection_8h_source.html  rviz__publish_8h.html  rviz__publish_8h_source.html  statistical__removal_8h.html  statistical__removal_8h_source.html  struct_line__def-members.html  struct_line__def.html  struct_rectangle-members.html  (+6 more)
html/: _r_e_a_d_m_e_8md.html  annotated.html  basicuse.html  basicuse_8md.html  classes.html  classtable_detection_geometric_model-members.html  classtable_detection_geometric_model.html  classtable_detection_geometric_model__coll__graph.map  classtable_detection_geometric_model__coll__graph.md5  concave__hull_8h.html  concave__hull_8h__dep__incl.md5  concave__hull_8h__incl.md5  concave__hull_8h_source.html  concave__hull__2d_8h.html  concave__hull__2d_8h_source.html  convex__hull_8h.html  convex__hull_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  geometry__utilities_8h.html  geometry__utilities_8h__dep__incl.map  geometry__utilities_8h__incl.map  geometry__utilities_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group__matrix_8h.html  group__matrix_8h__dep__incl.md5  group__matrix_8h__incl.map  group__matrix_8h__incl.md5  group__matrix_8h_source.html  index.html  index_8dox.html  md__r_e_a_d_m_e.html  (+35 more)
html/search/: all_61.js  all_63.js  all_64.js  all_66.js  all_67.js  all_6c.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_75.js  defines_64.js  files_62.js  files_63.js  files_67.js  files_72.js  functions_63.js  functions_64.js  functions_66.js  functions_67.js  functions_70.js  functions_72.js  functions_73.js  functions_75.js  search.js  variables_63.js  variables_64.js  variables_67.js  variables_6c.js  variables_6d.js  variables_70.js  variables_72.js  variables_76.js
include/: UniqueLoopsMngr.h  UniqueLoopsMngr.tpp  concave_hull.h  convex_hull.h  geometry_utilities.h  group_matrix.h  ransac_plane_compute.h  ransac_plane_detection.h  rviz_publish.h  tableDetectionGeometricModel.h
launch/: caract.launch  detection.launch  filt_ransac.launch  filt_ransac_dbg.launch  from_bagfile.launch  planes_detect.launch  valgrind_filt_ransac.launch
msg/: PlaneArray.msg  PlaneStamped.msg
ransac_plane_detection/html/: _unique_loops_mngr_8h.html  _unique_loops_mngr_8h_source.html  annotated.html  basicuse.html  class_unique_loops_mngr-members.html  class_unique_loops_mngr.html  classes.html  classgeometry_model-members.html  classgeometry_model.html  concave__hull_8h.html  (+62 more)
src/: caracterization.cpp  concave_hull.cpp  concave_hull_2d.cpp  convex_hull.cpp  detect_normal_planes.cpp  geometry_utilities.cpp  group_matrix.cpp  ransac_plane_compute.cpp  ransac_plane_detection.cpp  rviz_plane_def_pub.cpp  rviz_publish.cpp  simple_filtering.cpp  tableDetectionGeometricModel.cpp  tf_pub.launch
(+71 files in other folders)
